<resources>
    <string name="app_name">HorseShoePad</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="new_horse">Add Horse</string>
    <string name="new_horse_title">Enter details about your horse</string>
    <string name="horse_name">Horse\'s Name:</string>
    <string name="horse_sport">Horse\'s Equestrian Discipline:</string>
    <string name="horse_sex">Select Horse\'s Sex:</string>
    <string name="horse_age">Enter Horse\'s Age:</string>
    <string name="horse_height">Enter Horse\'s Height:</string>
    <string name="horse_breed">Enter Horse\'s Breed:</string>

    <string name="right_hind">Right Hind</string>
    <string name="right_front">Right Front</string>
    <string name="left_hind">Left Hind</string>
    <string name="left_front">Left Front</string>

    <string name="wait">Please, wait...</string>
    <string name="new_horse_success">New horse has been created successfully</string>
    <string name="new_horse_error">An unexpected error occurs</string>
    <string name="project_id">http://10.0.3.2:8080/_ah/api/</string>


    <!-- Activity titles. -->
    <string name="welcome">Welcome</string>
    <string name="new_horse_profile">New Horse Profile</string>
    <string name="view_gait_data">View Gait Data</string>
    <string name="activate_horseshoe_pads">Activate Horseshoe Pads</string>
    <string name="monitor_gait_activity">Monitor Gait Activity</string>
    <string name="acceleration_graph_data">Acceleration Graphs:</string>
    <string name="force_graph_data">Force Graphs:</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_confirm">Confirm</string>

    <!-- Button labels. -->
    <string name="create_horse_profile">Create Horse Profile</string>
    <string name="delete_all_horse_profiles">Delete All Horse Profiles</string>
    <string name="activate_pads">Activate Pads</string>
    <string name="begin_monitoring">Begin Monitoring</string>
    <string name="pause_monitoring">Pause Monitoring</string>
    <string name="change_gait">Change Gait</string>
    <string name="view_x_acceleration">View X Acceleration</string>
    <string name="view_data_graphs">View Data Graphs</string>
    <string name="btn_message">Google cloud endpoints with AngularJS</string>

    <!-- Labels -->
    <string name="horseshoePadIds">Horseshoe pad ids:</string>
    <string name="select_horse">Select a horse:</string>
    <string name="select_footing">Select a footing:</string>
    <string name="select_gait">Select a gait:</string>
    <string name="gait_detected">Gait detected:</string>
    <string name="average_force">Average force per step:</string>
    <string name="average_acceleration_x">Average acceleration x axis</string>
    <string name="average_acceleration_y">Average acceleration y axis</string>
    <string name="average_acceleration_z">Average acceleration z axis</string>
    <string name="average_stride_length">Average stride length</string>
    <string name="horseshoe_pads_detected">Horseshoe Pads Detected</string>
    <string name="average_acceleration_left_hind">Avg. Acceleration Left Hind</string>
    <string name="average_acceleration_left_front">Avg. Acceleration Left Front</string>
    <string name="average_acceleration_right_hind">Avg. Acceleration Right Hind</string>
    <string name="average_acceleration_right_front">Avg. Acceleration Right Front</string>
    <string name="average_acceleration_readings">Average Acceleration Readings:</string>
    <string name="average_force_readings">Average Force Readings:</string>
    <string name="axis_x">X Axis:</string>
    <string name="axis_y">Y Axis:</string>
    <string name="axis_z">Z Axis:</string>
    <string name="force">Force:</string>
    <string name="x_acceleration">X Acceleration</string>
    <string name="y_acceleration">Y Acceleration</string>
    <string name="z_acceleration">Z Acceleration</string>
    <string name="frc">Force</string>

    <!-- Menu items. -->
    <string name="detect_horseshoe_pads">Detect Horseshoe Pads</string>
    <string name="bank_data">Bank Data</string>
    <string name="deactivate_horseshoe_pads">Deactivate Horseshoe Pads</string>
    <string name="reconnect_horseshoe_pads">Reconnect Horseshoe Pads</string>

    <!--Dialog titles-->
    <string name="confirm_pad_assignment">Please Confirm</string>
    <string name="notice">Notice</string>
    <string name="battery_levels">Battery Levels</string>

    <!--Dialog messages-->
    <string name="must_select_horse">You must select a horse.</string>
    <string name="must_select_horseshoe_pad">You must select a horseshoe pad.</string>
    <string name="no_pads_detected">No horseshoe pads detected.</string>
    <string name="short_one_horseshoe_pad">You are one horseshoe pad short.</string>
    <string name="check_battery_levels">Pad Battery Levels</string>
    <string name="must_detect_horseshoe_pads">Horseshoe pads not yet detected.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="equestrian_discipline_array">
        <item>Dressage</item>
        <item>Hunt Seat</item>
        <item>Jumpers</item>
        <item>Eventing</item>
        <item>Western Pleasure</item>
        <item>Reining</item>
        <item>Thoroughbred Racing</item>
        <item>Standardbred Racing</item>
    </string-array>

    <string-array name="horse_sex_array">
        <item>Filly</item>
        <item>Mare</item>
        <item>Colt</item>
        <item>Stallion</item>
        <item>Gelding</item>
    </string-array>

    <!--Horse breed array must be in alphabetical order-->
    <string-array name="horse_breed_array">
        <item>Appaloosa</item>
        <item>Belgian</item>
        <item>Standardbred</item>
        <item>Thoroughbred</item>
        <item>Quarter Horse</item>
    </string-array>

    <string-array name="footings_array">
        <item>Sand</item>
        <item>Grass</item>
        <item>Dirt</item>
        <item>Pavement</item>
        <item>Various</item>
    </string-array>

    <string-array name="gaits_array">
        <item>Walk</item>
        <item>Trot</item>
        <item>Jog</item>
        <item>Canter</item>
        <item>Lope</item>
        <item>Gallop</item>
    </string-array>
    <string name="title_activity_acceleration_chart_x">AccelerationChartX</string>
    <string name="title_activity_graph">GraphActivity</string>

    <!-- Sign-in status messages -->
    <string name="title_text">Google Sign-In</string>

    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">378118509102-lplka736j8irn1scev0jbo2ui78t99t5.apps.googleusercontent.com</string>
</resources>
