<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="com.sporthorsetech.horseshoepad.GaitMonitorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/pad_5dp"
            android:background="@drawable/border"
            android:cropToPadding="true"
            android:orientation="vertical"
            android:padding="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/pad_10dp"
                android:singleLine="true"
                android:text="@string/select_horse"
                android:textColor="@color/black"
                android:textSize="@dimen/text_22sp"/>

            <Spinner
                android:id="@+id/spinnerSelectHorse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_15dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/pad_5dp"
            android:background="@drawable/border"
            android:cropToPadding="true"
            android:orientation="vertical"
            android:padding="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/pad_10dp"
                android:singleLine="true"
                android:text="@string/select_gait"
                android:textColor="@color/black"
                android:textSize="@dimen/text_22sp"/>

            <Spinner
                android:id="@+id/spinnerSelectGait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_15dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/pad_5dp"
            android:background="@drawable/border"
            android:cropToPadding="true"
            android:orientation="vertical"
            android:padding="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/pad_10dp"
                android:singleLine="true"
                android:text="@string/select_footing"
                android:textColor="@color/black"
                android:textSize="@dimen/text_22sp"/>

            <Spinner
                android:id="@+id/spinnerSelectFooting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_15dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/pad_5dp"
            android:layout_marginTop="@dimen/pad_30dp"
            android:background="@drawable/border"
            android:cropToPadding="true"
            android:orientation="vertical"
            android:padding="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_10dp"
                android:layout_marginTop="@dimen/pad_15dp"
                android:singleLine="true"
                android:text="@string/gait_detected"
                android:textColor="@color/black"
                android:textSize="@dimen/text_16sp"/>

            <EditText
                android:id="@+id/gait_detected_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_10dp"
                android:layout_marginRight="@dimen/pad_10dp"
                android:layout_marginTop="@dimen/pad_5dp"
                android:background="@drawable/border"
                android:clickable="false"
                android:cropToPadding="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:inputType="text"
                android:padding="1dp"
                android:paddingLeft="@dimen/pad_15dp"
                android:singleLine="true"
                android:textSize="@dimen/text_22sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_10dp"
                android:singleLine="true"
                android:text="@string/average_stride_length"
                android:textColor="@color/black"
                android:textSize="@dimen/text_16sp"/>

            <EditText
                android:id="@+id/average_stride_length_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_10dp"
                android:layout_marginRight="@dimen/pad_10dp"
                android:layout_marginTop="@dimen/pad_5dp"
                android:background="@drawable/border"
                android:clickable="false"
                android:cropToPadding="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:inputType="text"
                android:padding="1dp"
                android:paddingLeft="@dimen/pad_15dp"
                android:singleLine="true"
                android:textSize="@dimen/text_22sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_10dp"
                android:singleLine="true"
                android:text="@string/average_force"
                android:textColor="@color/black"
                android:textSize="@dimen/text_16sp"/>

            <EditText
                android:id="@+id/average_force_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_10dp"
                android:layout_marginRight="@dimen/pad_10dp"
                android:layout_marginTop="@dimen/pad_5dp"
                android:background="@drawable/border"
                android:clickable="false"
                android:cropToPadding="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:inputType="text"
                android:padding="1dp"
                android:paddingLeft="@dimen/pad_15dp"
                android:singleLine="true"
                android:textSize="@dimen/text_22sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_10dp"
                android:singleLine="true"
                android:text="@string/average_acceleration_x"
                android:textColor="@color/black"
                android:textSize="@dimen/text_16sp"/>

            <EditText
                android:id="@+id/average_acceleration_x_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_10dp"
                android:layout_marginRight="@dimen/pad_10dp"
                android:layout_marginTop="@dimen/pad_5dp"
                android:background="@drawable/border"
                android:clickable="false"
                android:cropToPadding="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:inputType="text"
                android:padding="1dp"
                android:paddingLeft="@dimen/pad_15dp"
                android:singleLine="true"
                android:textSize="@dimen/text_22sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_10dp"
                android:singleLine="true"
                android:text="@string/average_acceleration_y"
                android:textColor="@color/black"
                android:textSize="@dimen/text_16sp"/>

            <EditText
                android:id="@+id/average_acceleration_y_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_10dp"
                android:layout_marginRight="@dimen/pad_10dp"
                android:layout_marginTop="@dimen/pad_5dp"
                android:background="@drawable/border"
                android:clickable="false"
                android:cropToPadding="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:inputType="text"
                android:padding="1dp"
                android:paddingLeft="@dimen/pad_15dp"
                android:singleLine="true"
                android:textSize="@dimen/text_22sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_10dp"
                android:singleLine="true"
                android:text="@string/average_acceleration_z"
                android:textColor="@color/black"
                android:textSize="@dimen/text_16sp"/>

            <EditText
                android:id="@+id/average_acceleration_z_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_10dp"
                android:layout_marginRight="@dimen/pad_10dp"
                android:layout_marginTop="@dimen/pad_5dp"
                android:background="@drawable/border"
                android:clickable="false"
                android:cropToPadding="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:inputType="text"
                android:padding="1dp"
                android:paddingLeft="@dimen/pad_15dp"
                android:singleLine="true"
                android:textSize="@dimen/text_22sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pad_40dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/begin_monitoring_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/pad_10dp"
                    android:layout_marginRight="@dimen/pad_10dp"
                    android:paddingBottom="@dimen/pad_20dp"
                    android:paddingLeft="@dimen/pad_15dp"
                    android:paddingRight="@dimen/pad_15dp"
                    android:paddingTop="@dimen/pad_20dp"
                    android:text="@string/begin_monitoring"/>

                <Button
                    android:id="@+id/pause_monitoring_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/pad_10dp"
                    android:layout_marginRight="@dimen/pad_10dp"
                    android:paddingBottom="@dimen/pad_20dp"
                    android:paddingLeft="@dimen/pad_15dp"
                    android:paddingRight="@dimen/pad_15dp"
                    android:paddingTop="@dimen/pad_20dp"
                    android:text="@string/pause_monitoring"/>

                <Button
                    android:id="@+id/change_gait_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/pad_10dp"
                    android:layout_marginRight="@dimen/pad_10dp"
                    android:paddingBottom="@dimen/pad_20dp"
                    android:paddingLeft="@dimen/pad_15dp"
                    android:paddingRight="@dimen/pad_15dp"
                    android:paddingTop="@dimen/pad_20dp"
                    android:text="@string/change_gait"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
